1.0.0 (currently working on)
- [#3778] Feature: Add some hooks for the registration and unregistration process
- [#3780] Feature: Add a relation event->registrations
- [#3777] Feature: Add Model_Event::getAvailablePrices
- [#955] Change: Drop mod1
- [#3065] Change: Use the new getters/setters when using the configuration proxy
- [#2586] Change: Remove the conflict with date2cal once the date2cal bugs have been fixed
- [#3735] Fix: Error 102 when saving a registration record in backend
- [#3779] Fix: Typo in the Event Model: "Boad"
- [#3595] Fix: Internet Explorer shows border around radio button on registration page, patch by Thomas Biesenbach
- [#3738] Change: Require static_info_tables >= 2.1.0
- [#3710] Change: Use self:: for static calls within the same class
- [#3450] Change: Mention in setup.txt that the admin should not copy'n'paste the complete template into the TS template
- [#3733] Change: Improve the full-text search performance even more
- [#3729] Change: Provide ext_autoload for our extensions
- [#3718] Fix: CSV file displayed in the brower or saved with php suffix, original patch by Jörn Dost
- [#3583] Change: Speed up our full-text search
- [#3582] Change: Slim down our full-text search

0.9.0 (released 2010-03-01)
- [#3712] Fix: Items in the search filter comboboxes should be sorted alphabetically
- [#3696] Feature: Add links "hide" and "unhide" to the lists of editable events
- [#3695] Feature: Add functions for hiding and unhiding events
- [#3681] Change: In the notification e-mails to the organizers, use the organizer as sender
- [#3697] Feature: Add a timespan "today"
- [#3700] Fix: In pi1::hideRegisterColumnIfNecessary, $whatToDisplay is undeclared
- [#3703] Cleanup: Refactor and unit-test pi1::getEditLink
- [#3694] Feature: Add a function to check whether an event is published
- [#872] Cleanup: Drop all references to the the seminars baseURL configuration
- [#3679] Fix: Update all PEAR and emogrifier classes to the latest versions