@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#3766] Fix: In the events CSV file, place not formatted correctly
 - [#3778] Feature: Add some hooks for the registration and unregistration process
 - [#3780] Feature: Add a relation event->registrations
 - [#3777] Feature: Add Model_Event::getAvailablePrices
